review postman and api

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   </style>
 </head>
 <body>
-  <h1 style="padding: .5rem;align-items: center; margin: 0 auto;text-align: center;"> API Local - Laboratorio Clinico <span style="color: rgb(255, 236, 27);">"San Rafael"</span></h1>
+  <h1 style="padding: .5rem;align-items: center; margin: 0 auto;text-align: center;"> API - Laboratorio Clinico <span style="color: rgb(255, 236, 27);">"San Rafael"</span></h1>
   <section style="align-content: center; padding: .5rem; gap: 2rem;border-top: 2px solid rgb(32, 32, 32);min-width: 1300px; margin: 0 auto; width: 1300px;">
     <!-- Lab, User , Patient , Role,  Auth, Imagenes -->
     <article id="colum1" style="width: 650px;min-width:650px;border-right: 2px solid  rgb(30, 30, 30); overflow-x: hidden;">
@@ -131,9 +131,9 @@
                      Obtiene laboratorio según el ID .
                 </h2>
 
-                <p class="copy"><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/labs/1</p>
+                <p class="copy"><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/labs/:id</p>
                 <button id="LabGetID" class="btn">Copiar</button>
-                               <p class="note">El valor '1' es solo un ejemplo y debe coincidir con un id válido en la base de datos.</p>
+                               <p class="note">El valor :id es debe coincidir con un id válido en la base de datos.</p>
             </li>
    
               <li>
