--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/exams?category=1</p>
                   <button id="ExamGetCategoryID" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span> application/json</p>
+                  <p><span class="negrita">Content-Type:</span> FormData</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
               </li>
               <li> 
@@ -563,7 +563,7 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/exams/:id</p>
                   <button id="ExamGetID" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span> application/json</p>
+                  <p><span class="negrita">Content-Type:</span>  FormData</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
               </li>
               <li> 
@@ -573,7 +573,7 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/exams</p>
                   <button id="ExamPost" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span> application/json</p>
+                  <p><span class="negrita">Content-Type:</span>  FormData</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
   <pre style="box-sizing: border-box;overflow-x: scroll;">
     {
@@ -593,7 +593,7 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/exams/:id</p>
                   <button id="ExamPathID" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span> application/json</p>
+                  <p><span class="negrita">Content-Type:</span>  FormData</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
   <pre style="box-sizing: border-box;overflow-x: scroll;">
     {
