--- a/index_dev.html
+++ b/index_dev.html
@@ -543,7 +543,7 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>http://localhost:1234/exams</p>
                   <button id="ExamGet" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span> application/json</p>
+                  <p><span class="negrita">Content-Type:</span>  FormData</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
               </li>
               <li> 
@@ -553,7 +553,7 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>http://localhost:1234/exams?category=1</p>
                   <button id="ExamGetCategoryID" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span> application/json</p>
+                  <p><span class="negrita">Content-Type:</span> FormData</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
               </li>
               <li> 
@@ -563,7 +563,7 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>http://localhost:1234/exams/:id</p>
                   <button id="ExamGetID" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span> application/json</p>
+                  <p><span class="negrita">Content-Type:</span> FormData</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
               </li>
               <li> 
@@ -573,7 +573,7 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>http://localhost:1234/exams</p>
                   <button id="ExamPost" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span> application/json</p>
+                  <p><span class="negrita">Content-Type:</span>  FormData</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
   <pre style="box-sizing: border-box;overflow-x: scroll;">
     {
