--- a/index.html
+++ b/index.html
@@ -543,7 +543,6 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/exams</p>
                   <button id="ExamGet" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span> application/json</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
               </li>
               <li> 
@@ -553,7 +552,6 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/exams?category=1</p>
                   <button id="ExamGetCategoryID" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span> FormData</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
               </li>
               <li> 
@@ -563,7 +561,7 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/exams/:id</p>
                   <button id="ExamGetID" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span>  FormData</p>
+                  <p><span class="negrita">Content-Type:</span> FormData</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
               </li>
               <li> 
@@ -593,7 +591,7 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/exams/:id</p>
                   <button id="ExamPathID" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span>  FormData</p>
+                  <p><span class="negrita">Content-Type:</span> Formdata</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
   <pre style="box-sizing: border-box;overflow-x: scroll;">
     {
@@ -613,7 +611,7 @@
                   </h2>
                   <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/exams/:id</p>
                   <button id="ExamDeleteID" class="btn">Copiar</button>
-                  <p><span class="negrita">Content-Type:</span> application/json</p>
+            
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
               </li>
             </ul>
@@ -709,7 +707,7 @@
             </h2>
             <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/orders</p>
             <button id="OrderGet" class="btn">Copiar</button>
-             <p><span class="negrita">Content-Type:</span> application/json</p>
+    
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
           </li>
           <li> 
@@ -719,7 +717,7 @@
             </h2>
             <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/orders/1</p>
             <button id="OrderGetID" class="btn">Copiar</button>
-             <p><span class="negrita">Content-Type:</span> application/json</p>
+
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
           </li>
           <li> 
@@ -729,7 +727,7 @@
             </h2>
             <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/orders</p>
             <button id="OrderPost" class="btn">Copiar</button>
-             <p><span class="negrita">Content-Type:</span> application/json</p>
+             <p><span class="negrita">Content-Type:</span> FormData</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
           </li>
           <li> 
@@ -768,7 +766,7 @@
             </h2>
             <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/orders/{1}</p>
             <button id="OrderPathID" class="btn">Copiar</button>
-             <p><span class="negrita">Content-Type:</span> application/json</p>
+             <p><span class="negrita">Content-Type:</span> FormData</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
           </li>
           <li> 
@@ -778,7 +776,6 @@
             </h2>
             <p><span class="negrita">EndPoint : </span>https://lab-san-rafael-api.onrender.com/orders/:id</p>
             <button id="OrderDeleteID" class="btn">Copiar</button>
-             <p><span class="negrita">Content-Type:</span> application/json</p>
                   <p><span class="negrita">Authorization:  </span>Bearer UseToken</p>
           </li>
         </ul>
